Closed Bug 1849793 Opened 2 years ago Closed 2 years ago

Submenu arrows have the wrong color, in dark private windows' menus and context menus

Categories

(Core :: Widget: Gtk, defect, P3)

Unspecified
Linux
defect

Tracking

()

VERIFIED FIXED
119 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox-esr115 --- wontfix
firefox116 --- wontfix
firefox117 --- wontfix
firefox118 --- wontfix
firefox119 --- verified

People

(Reporter: dholbert, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

STR:

  1. On Ubuntu 22.04 system settings, ensure you have "Appearance: Light"
  2. Start Firefox Nightly with a fresh profile (or at least, with the default theme)
  3. Open a private browsing window (Ctrl+Shift+P)
  4. In that private browsing window: open a second tab, visit some page in that tab, and then close that tab.
  5. Alt+S to open your History menu, and compare how the "Recently Closed Tabs" entry looks, vs. the "Recently Closed Windows"

EXPECTED RESULTS:
The text and the submenu-arrow (>) should be the same color.

ACTUAL RESULTS:
The text and the submenu-arrow are opposite colors.

  • The "Recently Closed Tabs" text looks enabled, but its > looks grayed out / disabled.
  • The "Recently Closed Windows" text looks disabled, but its > looks solid / enabled.
    (The text is correct, as you can see if you hover them.)
    Additionally: if you hover the "Recently Closed Tabs" menu item, then its ">" can no longer be seen, since its improperly-grayed-out color happens to be the same color as the highlight background-color.

Mozregression shows this goes back to the pref-flip that enabled browser.theme.dark-private-windows as part of bug 1751481. (This probably goes back further than that, but I didn't dig further.)

This affects context menus, too (e.g. the "Move Tab" context-menu entry in a multi-tab private browsing window, which you can tell has the wrong color if you hover it and see the arrow disappear).

If I do either of the following things, then the bug goes away:
(A) choose "appearance: dark" in Ubuntu system settings (this makes Firefox's default theme use a dark look for regular windows)
(B) choose Firefox's built-in "dark" or "light" themes (these themes force regular&private windows to both use the theme color)

Presumably these things make the bug go away because they make Firefox draw private browsing windows with the same theme as regular windows, which bypasses the special-case code that "dark private windows" use which is seemingly responsible for this.

Note, bug 1796849 (fixed) brought up a kinda-similar issue (though it was potentially KDE-specific?). Toggling ni=emilio since he took a look there and I think is the most-adept at poking at color-scheme related issues. :)

If it's relevant, my about:support has:

OS Theme 	Yaru / Yaru
Window Protocol	wayland
Desktop Environment	ubuntu:gnome
See Also: → 1796849
Flags: needinfo?(emilio)

Set release status flags based on info from the regressing bug 1751481

I just tested on Windows and can't reproduce there (with OS theme set to "light" to get the same light-regular-windows/dark-pb-windows scenario).

So: presumably this is Linux-specific, and related to GTK theme management similar to bug 1796849.
--> reclassifying to Widget:GTK

Component: General → Widget: Gtk
OS: Unspecified → Linux
Product: Firefox → Core
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Priority: -- → P3
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/abe9789555b5 Use non-native rendering for menuarrows on Linux. r=dholbert,stransky

Set release status flags based on info from the regressing bug 1751481

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 119 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox118 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)
Flags: needinfo?(emilio)

Reproduced with Fx 117.0b6 on Ubuntu 22.
Verified fixed with Fx 120.0a1 (2023-09-28) and Fx 119.0b2 on Ubuntu 22.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Regressions: 1858349
Regressions: 1861253
Regressions: 1861630
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: