Bug 1849793 - Use non-native rendering for menuarrows on Linux. r=dholbert,stransky

Differential Revision: https://phabricator.services.mozilla.com/D186712